@@ -23,7 +23,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 
 import ru.taximaxim.codekeeper.core.ChDiffUtils;
 import ru.taximaxim.codekeeper.core.DatabaseType;
@@ -72,7 +71,7 @@ public class GrantChPrivilege extends ChParserAbstract {
             List<String> permissions = priv.permissions().permission().stream()
                     .map(ParserAbstract::getFullCtxText)
                     .map(e -> e.toUpperCase(Locale.ROOT))
-                    .collect(Collectors.toList());
+                    .toList();
 
             // 1 privilege for each user or role
             for (var user : usersOrRoles) {
